// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no stats yet 1`] = `
<ScrollView>
  <Button
    onPress={[Function]}
    title="Edit Chicken"
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 20,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="lightgrey"
      name="ios-arrow-back"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingLeft": 10,
        }
      }
    />
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="grey"
      name="ios-arrow-forward"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingRight": 10,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "padding": 10,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Name:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        The First Chicken
      </Component>
      <Component
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        Hatched On:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </Component>
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Breed:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </Component>
  </Component>
  <Component>
    <Component
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Total Eggs:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Heaviest Egg:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Longest Streak:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Last 7 Days:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      {
  "2018-10-06": 1
}
    </Component>
  </Component>
</ScrollView>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when stats available 1`] = `
<ScrollView>
  <Button
    onPress={[Function]}
    title="Edit Chicken"
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 20,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="lightgrey"
      name="ios-arrow-back"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingLeft": 10,
        }
      }
    />
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="grey"
      name="ios-arrow-forward"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingRight": 10,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "padding": 10,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Name:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        The First Chicken
      </Component>
      <Component
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        Hatched On:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </Component>
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Breed:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </Component>
  </Component>
  <Component>
    <Component
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Total Eggs:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Heaviest Egg:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      88.1
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      2017-04-02
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Longest Streak:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Last 7 Days:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      {
  "2018-10-06": 1
}
    </Component>
  </Component>
</ScrollView>
`;

exports[`Chicken component: Should render correctly when chicken ID passed in 1`] = `
<ChickenRenderer
  chicken={
    Object {
      "name": "The First Chicken",
    }
  }
  chickenId="chicken1"
  navigation={
    Object {
      "getParam": [MockFunction] {
        "calls": Array [
          Array [
            "chickenId",
            "NO-ID",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "chicken1",
          },
        ],
      },
    }
  }
  nextChickenId="chicken2"
  prevChickenId={null}
  stats={
    Object {
      "heaviest": Object {
        "chickenId": "chicken1",
        "chickenName": "Bossie",
        "damaged": false,
        "date": "2018-08-01",
        "modified": "2018-01-12T18:05:54.806Z",
        "notes": "This was the record setting egg from May 2017, real egg was 66.1g on this day",
        "userId": "MVQUEcoTaVUhUdo2ZS0zsIE6tn93",
        "weight": 88.1,
      },
      "lastSevenDays": Object {
        "2018-07-31": 0,
        "2018-08-01": 1,
        "2018-08-02": 1,
        "2018-08-03": 0,
        "2018-08-04": 0,
        "2018-08-05": 0,
        "2018-08-06": 0,
      },
      "longestStreak": 2,
      "total": 2,
    }
  }
/>
`;

exports[`Chicken component: Should render correctly when chicken not found 1`] = `
<Component>
  Chicken with ID chicken3 not found
</Component>
`;

exports[`Chicken component: Should render correctly when no chicken ID passed in 1`] = `
<Component>
  No Chicken ID passed in!
</Component>
`;
